[project]
name = "MMMAudio"
version = "0.0.0"
description = "Python/Mojo audio coding environment."
readme = "README.md"
requires-python = ">=3.13"
authors = [
{ name = "Sam Pluta", email = "spluta@gmail.com" },
{ name = "Ted Moore", email = "ted@tedmooremusic.com" },
]
license = "MIT"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]